<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/llTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:text="@string/title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/description" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.Material3.LabelMedium"
                android:text="@string/created_at" />

        </LinearLayout>


        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_delete"
            android:layout_gravity="center|end"
            android:contentDescription="@string/delete"/>


    </FrameLayout>




</com.google.android.material.card.MaterialCardView>